# dcm_ustc_data_process

./: .gitignore  README.md
doc/: data_format.md
source/common/inc/: constant.hh  getopt.hh  list_file.hh
source/common/src/: list_file.cc
source/fec_data_dec/: CMakeLists.txt  Readme.md  fec_data_dec.cc  fec_data_dec.hh
source/fec_data_dec/inc/: dec_single_file.hh
source/fec_data_dec/src/: dec_single_file.cc
source/fec_noise_calc/: CMakeLists.txt  fec_noise_calc.cc  fec_noise_calc.hh
source/fec_noise_calc/inc/: noise_calc.hh
source/fec_noise_calc/src/: noise_calc.cc
source/matlab_plot/: import_data.m  load_fec_binary_data.m  load_noise_file.m  read_fec_event.m  read_noise_file.m  readme.md
source/usb_data_separate/: CMakeLists.txt  usb_data_separate.cc  usb_data_separate.hh
